--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Escape de Isla Kaimana</title>
+  <title>Escapa de la isla efímera</title>
 
   <style>
   @import url('https://fonts.googleapis.com/css2?family=Barriecito&family=Barrio&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
@@ -21,7 +21,7 @@
        <div class="contenido">
           <h1 class="texto">La Isla Efímera</h1>
           <p>Despiertas en la arena húmeda de una isla paradisiaca y desconocida. No recuerdas cómo has llegado hasta allí. Te levantas desorientado, cegado por el reflejo del sol sobre el agua cristalina...</p>
-          <button id="btn-comenzar">COMIENZA LA AVENTURA</button>
+          <button id="btn-comenzar">Comienza la aventura</button>
       </div>
   </section>
 
