--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <link rel="stylesheet" href="css/estilos.css" />
 </head>
 
 <body>
+  <!-- Score Display -->
+  <div id="score-container">Puntuación: <span id="score">100</span></div>
+
   <!-- Pantalla de Bienvenida -->
   <section id="pantalla-bienvenida" class="pantalla visible">
        <div class="contenido">
@@ -46,15 +50,97 @@
       </div>
 
       <!-- Pantalla Jungla-->
-      <section id="escena-diario" class="pantalla">
-        <div class="diario">
+      <section id="escena-jungla" class="pantalla">
+        <div class="contenido">
+          <h2>La Jungla</h2>
+          <p>Te adentras en la espesa jungla. Un extraño pedestal de piedra con inscripciones llama tu atención.</p>
+          <button id="btn-ver-puzzle2">Examinar pedestal</button>
+        </div>
+      </section>
 
+      <!-- Modal para el puzzle 2 -->
+      <div id="modal2" class="modal">
+        <div class="modal-contenido">
+          <span class="cerrar" id="cerrar-modal-puzzle2">&times;</span>
+          <h2>Acertijo de la Jungla</h2>
+          <p>"Tengo ciudades, pero no casas. Tengo montañas, pero no árboles. Tengo agua, pero no peces. ¿Qué soy?"</p>
+          <input type="text" id="respuesta-puzzle2" placeholder="Introduce la respuesta" />
+          <button id="btn-resolver-puzzle2">Resolver</button>
+          <div class="feedback"><p id="feedback-puzzle2"></p></div>
+        </div>
+      </div>
 
+      <!-- Pantalla Cueva-->
+      <section id="escena-cueva" class="pantalla">
+        <div class="contenido">
+          <h2>La Cueva</h2>
+          <p>El camino te lleva a una cueva oscura. En la pared, un mecanismo con números parece ser la única salida.</p>
+          <button id="btn-ver-puzzle3">Investigar mecanismo</button>
+        </div>
+      </section>
+
+      <!-- Modal para el puzzle 3 -->
+      <div id="modal3" class="modal">
+        <div class="modal-contenido">
+          <span class="cerrar" id="cerrar-modal-puzzle3">&times;</span>
+          <h2>El Enigma Numérico</h2>
+          <p>"Si un gallo pone un huevo en la cima de un tejado, ¿hacia qué lado caerá?"</p>
+          <input type="text" id="respuesta-puzzle3" placeholder="Introduce la respuesta" />
+          <button id="btn-resolver-puzzle3">Resolver</button>
+          <div class="feedback"><p id="feedback-puzzle3"></p></div>
+        </div>
+      </div>
+
+      <!-- Pantalla Faro-->
+      <section id="escena-faro" class="pantalla">
+        <div class="contenido">
+          <h2>El Faro</h2>
+          <p>Al salir de la cueva, vislumbras un faro a lo lejos. Parece ser tu última esperanza. En la puerta, un último acertijo te bloquea el paso.</p>
+          <button id="btn-ver-puzzle4">Acercarse al faro</button>
+        </div>
+      </section>
+
+      <!-- Modal para el puzzle 4 -->
+      <div id="modal4" class="modal">
+        <div class="modal-contenido">
+          <span class="cerrar" id="cerrar-modal-puzzle4">&times;</span>
+          <h2>El Acertijo Final</h2>
+          <p>"¿Qué tiene un ojo y no puede ver?"</p>
+          <input type="text" id="respuesta-puzzle4" placeholder="Introduce la respuesta" />
+          <button id="btn-resolver-puzzle4">Resolver</button>
+          <div class="feedback"><p id="feedback-puzzle4"></p></div>
+        </div>
+      </div>
+
+      <!-- Pantalla Final -->
+      <section id="pantalla-final" class="pantalla">
+        <div class="contenido">
+          <h1>¡Felicidades!</h1>
+          <p>Has escapado de la Isla Efímera. Tu puntuación final es de <span id="score-final"></span> puntos.</p>
+          <button id="btn-reiniciar">Jugar de nuevo</button>
         </div>
       </section>
 
     </div>
   </section>
+
+  <!-- Botón para Pistas Extras -->
+  <button id="btn-pista-extra" class="btn-pista-extra-estilo">
+    <i class="fa-solid fa-magnifying-glass"></i>
+  </button>
+
+  <!-- Modal para Pistas Extras -->
+  <div id="modal-pista" class="modal">
+    <div class="modal-contenido">
+      <span class="cerrar" id="cerrar-modal-pista">&times;</span>
+      <img id="pista-img" src="" alt="Pista extra" style="max-width: 80%; max-height: 80%; margin-bottom: 20px;">
+      <p id="feedback-pista" style="color: white; font-size: 18px;"></p>
+      <div id="botones-pista-container">
+        <button id="btn-segunda-pista" class="btn-pista-secundario">Pedir 2ª pista (-25 pts)</button>
+        <button id="btn-cerrar-pista" class="btn-pista-primario">Cerrar</button>
+      </div>
+    </div>
+  </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/SplitText.min.js"></script>
